isEnabled instead of isVisible for thumbviews, a fix for cell mixups

--- a/frameworks/table/resources/table.css
+++ b/frameworks/table/resources/table.css
@@ -48,8 +48,8 @@
 
 
 .sc-table-data-view .sc-dataview-row.sel {
-  background-color: #6aabe3 !important;
-  border-bottom: 1px solid #6aabe3 !important;
+  background-color: #38a0f0 !important;
+  border-bottom: 1px solid #38a0f0 !important;
   color: white !important;
 }
 
